--- a/invitefile/index.html
+++ b/invitefile/index.html
@@ -31,7 +31,7 @@
       display:grid;
       place-items:center;
       /* BACKGROUND IMAGE - EDIT THIS LINE TO CHANGE BACKGROUND */
-      background: url("Dress.jpeg") center/cover no-repeat fixed;
+      background: url("Darkoalt.jpeg") center/cover no-repeat fixed;
       /* Alternative backgrounds (uncomment one and comment the line above):
       background: url("https://images.unsplash.com/photo-1519681393784-d120267933ba") center/cover no-repeat fixed;
       background: linear-gradient(135deg, #667eea 0%, #764ba2 100%) fixed;
